<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2013 XXXX XXXXXXXXXX.
 * All rights, including trade secret rights, reserved.
 *
 */
-->
<resources>

    <string name="app_name">TaskManager</string>
    <!-- option menu -->
    <string name="menu_show_ignorelist">Show ingore list</string>
    <string name="menu_show_autolist">Show auto kill list</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_taskmanager">Taskmanager</string>
    <string name="refreshing_dialog_title">Please wait</string>
    <string name="string_refresh_btn_txt">Refresh</string>
    <string name="string_memory_status">memory status</string>
    <string name="string_cpu_status">CPU status</string>
    <string name="string_start_refresh_txt">Start refresh</string>
    <string name="string_refresh_complete_txt">Refresh Complete!</string>

    <!--  Context menu string in main view -->
    <string name="string_context_menu_kill_txt">Kill</string>
    <string name="string_context_menu_switchto">Switch To</string>
    <string name="string_context_menu_ingore">Ignore it</string>
<!--     <string name="string_context_menu_autokill">Auto kill it</string> -->
    <string name="string_context_menu_detail">Details</string>

    <string name="string_memory_used_txt">Used:</string>
    <string name="string_memory_avail_txt">Avail:</string>

    <!-- setting strings -->
    <string name="settings_system_configure">System Configure</string>
    <string name="settings_auto_run_title">Enable Auto Run</string>
    <string name="settings_auto_run_summary">Run automatically after phone reboots</string>

    <string name="settings_auto_kill_title">Enable Auto Kill Service</string>
    <string name="settings_auto_kill_summary">Kill the usless processes automatically in background</string>

    <string name="settings_enable_ignore_title">Enable Ignore List</string>
    <string name="settings_enable_ignore_summary">If enable ignore list, the processes in ignore list will not be shown in process list nor killed by auto kill service</string>

    <string name="settings_enable_notification_title">Enable Notification</string>
    <string name="settings_enable_notification_summary">If enable notifcation, you will get notice when auto kill service is completed</string>

    <string name="settings_operation_title">Operatiton And View</string>
    <string name="settings_show_system_switch_title">Show system process</string>
    <string name="settings_show_system_swith_summary">Show all system processes. The System processes will show in Blue color</string>
    <string name="settings_show_service_title">Show Service and Foreground Process</string>
    <string name="settings_show_service_summary">Show all serivces and foreground processes. These processes will show in Green color</string>
    <string name="settings_swip_kill_switch_title">Enable swipe</string>
    <string name="settings_swip_kill_switch_summary">Enable swipe to kill process in process list</string>

    <string name="settings_click_kill_title">Click process to kill</string>
    <string name="settings_click_kill_summary">If you have forbitten it, you can long-process to call context menu to kill it</string>

    <string name="strings_delete_txt">Delete</string>
    <string name="strings_mark_all_txt">Mark All</string>
    <string name="strings_unmark_all_txt">Unmark All</string>
    <string name="string_list_empty">List is empty</string>
    <string name="string_btn_kill_all">Kill All</string>
    <string name="string_process_count">Count:  %1$s</string>
    <string name="string_nofitication_content">Have released %1$s MB Memory</string>
    <string name="string_auto_kill_complete">Auto clear proceses have been completed</string>
</resources>